# mlidsai

./: Dockerfile  Network_Intrusion_Detection_System.ipynb  README.md  ai_model.keras  app.py  compose.yaml  dashboard.json  gui.py  prometheus.yml  pyproject.toml  requirements.txt  simulate.py  test.sh
.github/workflows/: build.yml
app/: __main__.py  api.py  compact.py  predict.py
app/model/: __init__.py  base.py  isolation_forest.py  random_forest.py  static.py  xdgboost.py
files/isolation_forest/: isolation_forest.joblib
files/random_forest/: feature_scaler.joblib  pca_transformer.joblib
files/xdgboost/: scaler_params.json  xdgboost.json
test/cicflowmeter/: test_anomaly.sh  test_normal.sh
test/cse-cic-ids/: 10k.csv  csv_1k.csv  simulate.py
